<resources>
    <string name="app_name">DukaLite</string>
    <string name="content_description">image</string>
    <string name="title_login">LOGIN</string>
    <string name="et_hint_email_id">Email</string>
    <string name="et_hint_password">Password</string>
    <string name="lbl_forgot_password">Forgot Password?</string>
    <string name="btn_lbl_login">Login</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="register"><u>Register</u></string>
    <string name="create_an_account">CREATE AN ACCOUNT</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_first_name">First name</string>
    <string name="et_hint_confirm_password">Confirm password</string>
    <string name="i_agree_to_terms_conditions">I agree to the <u>Terms and Conditions</u></string>
    <string name="btn_lbl_register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login"><u>Login</u></string>
    <string name="err_msg_enter_first_name">Please enter first name</string>
    <string name="err_msg_enter_last_name">Please enter last name</string>
    <string name="err_msg_enter_email">Please enter email address</string>
    <string name="err_msg_enter_password">Please enter password</string>
    <string name="err_msg_enter_confirm_password">Please confirm your password</string>
    <string name="err_msg_password_confirm_password_mismatch">Password and confirm password do not match</string>
    <string name="err_msg_agree_terms_conditions">Please agree to the Terms and Conditions</string>
    <string name="please_wait">Please Wait&#8230;</string>
    <string name="title_forgot_password">FORGOT PASSWORD?</string>
    <string name="forgot_password_title_description">Enter your username and email address and we\'ll send you an email to reset your password</string>
    <string name="btn_lbl_submit">Submit</string>
    <string name="email_sent_success">\"Email sent successfully to reset your password \"</string>
    <string name="register_success">Registration successful!</string>
    <string name="title_complete_profile">PROFILE</string>
    <string name="et_hint_mobile_number">Mobile Number</string>
    <string name="rb_lbl_male">MALE</string>
    <string name="rb_lbl_female">FEMALE</string>
    <string name="btn_lbl_save">Save</string>
    <string name="read_storage_permission_denied">Oops, you just denied storage permission. You can allow it from Settings</string>
    <string name="image_selection_failed">Image selection failed!</string>
    <string name="err_msg_enter_mobile_number">Please enter your mobile number</string>
    <string name="msg_profile_update_success">Profile updated successfully!</string>
</resources>