<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar"
    tools:context=".activities.RegisterActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_register_activity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <com.lentimosystems.dukalite.utils.DukaLiteTextViewBold
            android:id="@+id/tv_title"
            android:gravity="center"
            android:paddingStart="@dimen/toolbar_title_paddingStart"
            android:paddingEnd="0dp"
            android:text="@string/create_an_account"
            android:textColor="@color/primaryText"
            android:textSize="@dimen/toolbar_title_textSize"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </androidx.appcompat.widget.Toolbar>
    <ScrollView
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_register_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_first_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/hint_first_name"
                android:textColorHint="@color/secondaryText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.lentimosystems.dukalite.utils.DukaLiteEditText
                    android:id="@+id/et_first_name"
                    android:inputType="text"
                    android:padding="@dimen/et_padding"
                    android:textColor="@color/primaryText"
                    android:textSize="@dimen/et_textSize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_last_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginStart="16dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/hint_last_name"
                android:textColorHint="@color/secondaryText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.lentimosystems.dukalite.utils.DukaLiteEditText
                    android:id="@+id/et_last_name"
                    android:inputType="text"
                    android:padding="@dimen/et_padding"
                    android:textColor="@color/primaryText"
                    android:textSize="@dimen/et_textSize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginStart="16dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/et_hint_email_id"
                android:textColorHint="@color/secondaryText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.lentimosystems.dukalite.utils.DukaLiteEditText
                    android:id="@+id/et_email"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/et_padding"
                    android:textColor="@color/primaryText"
                    android:textSize="@dimen/et_textSize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginStart="16dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/et_hint_password"
                android:textColorHint="@color/secondaryText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.lentimosystems.dukalite.utils.DukaLiteEditText
                    android:id="@+id/et_password"
                    android:inputType="textPassword"
                    android:padding="@dimen/et_padding"
                    android:textColor="@color/primaryText"
                    android:textSize="@dimen/et_textSize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_confirm_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginStart="16dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/et_hint_confirm_password"
                android:textColorHint="@color/secondaryText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.lentimosystems.dukalite.utils.DukaLiteEditText
                    android:id="@+id/et_confirm_password"
                    android:inputType="textPassword"
                    android:padding="@dimen/et_padding"
                    android:textColor="@color/primaryText"
                    android:textSize="@dimen/et_textSize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                android:id="@+id/ll_terms_and_conditions"
                android:layout_marginTop="25dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_confirm_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/cb_terms_and_conditions"
                    tools:checked="false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <com.lentimosystems.dukalite.utils.DukaLiteTextView
                    android:id="@+id/tv_terms_conditions"
                    android:layout_marginStart="@dimen/txt_terms_conditions_marginStart"
                    android:text="@string/i_agree_to_terms_conditions"
                    android:textColor="@color/secondaryText"
                    android:textSize="@dimen/txt_terms_conditions_textSize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
            <com.lentimosystems.dukalite.utils.DukaLiteButton
                android:id="@+id/btn_register"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/button_background"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:paddingTop="@dimen/btn_padding"
                android:paddingBottom="@dimen/btn_padding"
                android:text="@string/btn_lbl_register"
                android:textColor="@color/white"
                android:textSize="@dimen/btn_textSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_terms_and_conditions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:id="@+id/ll_login"
                android:layout_marginTop="25dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.lentimosystems.dukalite.utils.DukaLiteTextView
                    android:id="@+id/already_have_an_account"
                    android:text="@string/already_have_an_account"
                    android:textColor="@color/secondaryText"
                    android:textSize="@dimen/txt_terms_conditions_textSize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <com.lentimosystems.dukalite.utils.DukaLiteTextViewBold
                    android:id="@+id/tv_login"
                    android:layout_marginStart="@dimen/txt_terms_conditions_marginStart"
                    android:text="@string/login"
                    android:textColor="@color/secondaryText"
                    android:textSize="@dimen/txt_terms_conditions_textSize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>